Ivanchuk_Pavel/13.Kuberenetes.Helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-drupal
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: drupal.k8s-3.sa
    http:
      paths:
      - path: /drupal
        pathType: Prefix
        backend:
          service:
            name: sa-drupal
            port:
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wordpress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: wordpress.k8s-3.sa
    http:
      paths:
      - path: /wordpress
        pathType: Prefix
        backend:
          service:
            name: sa-wordpress
            port:
              number: 80
